# gpui-play

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/rules/: build-commands.md  documentation.md  gpui-notes.md  project-overview.md  project-structure.md  tdd-workflow.md
docs/done/: menu-test-red-phase.md
docs/gpui-usage/: an_index.md  an_overview.md  animation.md  app.md  async-tasks.md  button.md  canvas.md  css-grid.md  dialogs.md  display-appearance.md  drag-drop.md  file-drop.md  gestures.md  gradients.md  hitbox.md  images.md  lists.md  menus.md  overlays.md  platform-utils.md  screen-capture.md  scroll.md  shadows.md  state-management.md  styled-text.md  svg.md  testing.md  text-input.md  transforms.md  typography.md  untested.md  window.md
docs/plans/: animation-plan.md  async-tasks-plan.md  connector-lines.md  css-grid-plan.md  dialogs-plan.md  (+27 more)
src/: async_tasks.rs  draw_test.rs  lib.rs  menu_test.rs  shape.rs  state_management.rs  text_input.rs
tests/: animation_test.rs  app_test.rs  async_tasks_test.rs  css_grid_test.rs  dialogs_test.rs  display_appearance_test.rs  drag_drop_test.rs  draw_test_app.rs  draw_test_menu.rs  draw_test_window.rs  file_drop_test.rs  gestures_test.rs  gradients_test.rs  hitbox_test.rs  images_test.rs  lists_test.rs  menu_test.rs  overlays_test.rs  platform_utils_test.rs  screen_capture_test.rs  scroll_test.rs  shadows_test.rs  shape_test.rs  state_management_test.rs  styled_text_test.rs  svg_test.rs  testing_test.rs  text_input_test.rs  transforms_test.rs  typography_test.rs  window_test.rs
